kubernetes/backend-api.deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-api

spec:
  replicas: 2
  selector:
    matchLabels:
      app: backend-api
  template:
    metadata:
      name: backend-api
      labels:
        app: backend-api
    spec:
      containers:
      - name: backend-api
        image: roelvandegrint.azurecr.io/backend-api:9b3b7034d07fe02d2383d243541d62d5a4bb1ad6
        resources:
          limits:
            memory: 128Mi
            cpu: 500m
      imagePullSecrets:
        - name: roelvandegrint.azurecr.io
