kubernetes/multiarchapi.deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: multi-arch-api

spec:
  replicas: 1
  selector:
    matchLabels:
      app: multi-arch-api
  template:
    metadata:
      name: multi-arch-api
      labels:
        app: multi-arch-api
    spec:
      containers:
      - name: multi-arch-api
        image: roelvandegrint.azurecr.io/multi-arch-api:8951af42b90f3e79f5db4b6ccb177ae122917059
        resources:
          limits:
            memory: 128Mi
            cpu: 500m
      imagePullSecrets:
        - name: roelvandegrint.azurecr.io
