kubernetes/multiarchapi.service.yml
apiVersion: v1
kind: Service
metadata:
  name: multi-arch-api
spec:
  selector:
    app: multi-arch-api
  ports:
  - port: 80
    targetPort: 80
    nodePort: 30001
  type: NodePort
