kubernetes/public-api.service.yml
apiVersion: v1
kind: Service
metadata:
  name: public-api
spec:
  selector:
    app: public-api
  ports:
  - port: 80
    targetPort: 80
  type: ClusterIP
