kubernetes/client-facing.ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myingress
  labels:
    name: myingress
spec:
  rules:
  - host: cf.local
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: multi-arch-api
            port: 
              number: 80
